syntax = "proto3";

import "table_id.proto";
import "table_name.proto";

service TableCreator {
    rpc create (TableName) returns (TableId) {}
}